# sphinx-shared-resources

./: README.md  make_common.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml
.reuse/: dep5
sphinx_shared_resources/: __init__.py
sphinx_shared_resources/sphinx_shared_resources.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
